--- a/app/src/main/res/layout/activity_cardio_4_details.xml
+++ b/app/src/main/res/layout/activity_cardio_4_details.xml
@@ -90,11 +90,11 @@
     <ProgressBar
         android:id="@+id/progressBarCircle"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="35sp"
+        android:layout_height="35sp"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:background="@drawable/progressbar_circle_light_blue"
         android:indeterminate="false"
         android:max="100"
@@ -109,12 +109,11 @@
         android:id="@+id/textViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
         android:text="@string/time_cardio_example"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:typeface="monospace"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/progressBarCircle"
@@ -122,7 +121,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButtonStartPause"
-        android:layout_width="wrap_content"
+        android:layout_width="30sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
