--- a/app/src/main/res/layout/activity_training_4_details.xml
+++ b/app/src/main/res/layout/activity_training_4_details.xml
@@ -102,8 +102,8 @@
         <ProgressBar
             android:id="@+id/progressBarCircle"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"
             android:layout_centerInParent="true"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
@@ -122,12 +122,11 @@
             android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/time_example"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-            android:typeface="monospace"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/progressBarCircle"
@@ -135,14 +134,14 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingButtonStartPause"
-            android:layout_width="wrap_content"
+            android:layout_width="30sp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:onClick="onClick"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
             app:layout_constraintEnd_toStartOf="@+id/buttonResetTimer"
