--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -349,6 +349,7 @@
             android:layout_marginStart="8dp" />
 
         <RadioGroup
+            android:id="@+id/radioSexChooserRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
