settings-module: second concept of adding diet ratio
** Commited by Łukasz Krawczak **

--- a/app/src/main/res/layout/activity_settings_2_details_triple.xml
+++ b/app/src/main/res/layout/activity_settings_2_details_triple.xml
@@ -1,8 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutSettingsTripleDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".settings.SettingsDetailsTriple">
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    tools:context=".settings.SettingsDetailsTripleActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbaSettingsDetailsTripleActivity"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </android.support.design.widget.AppBarLayout>
+
+    <EditText
+        android:id="@+id/firstSettingsTripleEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appBarLayout"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:gravity="right"
+        android:inputType="numberDecimal"
+
+        android:numeric="decimal"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+    <TextView
+        android:id="@+id/firstSettingsTripleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:text="@string/data_example"
+        app:layout_constraintBaseline_toBaselineOf="@+id/firstSettingsTripleEditText"
+        app:layout_constraintStart_toStartOf="@+id/firstSettingsTripleEditText" />
+
+
+    <EditText
+        android:id="@+id/secondSettingsTripleEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appBarLayout"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:gravity="right"
+        android:inputType="numberDecimal"
+
+        android:numeric="decimal"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstSettingsTripleEditText" />
+
+    <TextView
+        android:id="@+id/secondSettingsTripleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:text="@string/data_example"
+        app:layout_constraintBaseline_toBaselineOf="@+id/secondSettingsTripleEditText"
+        app:layout_constraintStart_toStartOf="@+id/secondSettingsTripleEditText" />
+
+    <EditText
+        android:id="@+id/thirdSettingsTripleEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appBarLayout"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:gravity="right"
+        android:inputType="numberDecimal"
+
+        android:numeric="decimal"
+        android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/secondSettingsTripleEditText" />
+
+    <TextView
+        android:id="@+id/thirdSettingsTripleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:text="@string/data_example"
+        app:layout_constraintBaseline_toBaselineOf="@+id/thirdSettingsTripleEditText"
+        app:layout_constraintStart_toStartOf="@+id/thirdSettingsTripleEditText" />
+
 
 </android.support.constraint.ConstraintLayout>
